--- a/OsangHC_FunctionApp/OsangHC_FunctionApp.csproj
+++ b/OsangHC_FunctionApp/OsangHC_FunctionApp.csproj
@@ -4,7 +4,7 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.22.0" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.18.4" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="3.0.3" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
